Add IdleTimeoutMinutes config field to disable the presence if idling in the menu for a long enough duration (defaults to 30 minutes)

--- a/resources/config.json
+++ b/resources/config.json
@@ -1,5 +1,6 @@
 {
     "QuestAddress": "REPLACE WITH QUEST IP",
     "QuestPort": 3500,
-    "UpdateInterval": 2000
+    "UpdateInterval": 2000,
+    "IdleTimeoutMinutes": 30
 }
